Fixed the flex-wrap

--- a/back-end/stylesheets/DevClub/projects.css
+++ b/back-end/stylesheets/DevClub/projects.css
@@ -10,6 +10,7 @@
 .projects-wrapper ul{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     list-style-type: none;
     width:100%;
     
